--- a/login.html
+++ b/login.html
@@ -69,16 +69,16 @@
       <p>B2B Sales Development Representative</p>
     </div>
     <form action="" class="form_input">
-      <input type="text" name="user_login" id="user__login" placeholder="User Name">
+      <input type="text" name="user_name" id="user__name" placeholder="User Name">
           <span class="input__login"></span>
 
-          <input type="text" name="user_login" id="user__login" placeholder="User Name">
+          <input type="text" name="user__login" id="user__login" placeholder="User Login">
           <span class="input__login"></span>
 
-          <input type="text" name="user_login" id="user__login" placeholder="User Name">
+          <input type="email" name="user__email" id="user__email" placeholder="User Email">
           <span class="input__login"></span>
 
-          <input type="text" name="user_login" id="user__login" placeholder="User Name">
+          <input type="password" name="user__pswd" id="user__pswd" placeholder="******">
           <span class="input__login"></span>
 
           <input type="submit" value="Register" class="btn__login">
@@ -87,7 +87,7 @@
 
   </div>
 
-  <div class="blue__container">
+  <div class="blue__container-register">
   </div>
 </div>
 
