--- a/login.html
+++ b/login.html
@@ -16,12 +16,14 @@
       rel="stylesheet"
     />
 
+    <script defer src="app.js"></script>
+
     <title>Document</title>
   </head>
-  <body>
+  <body class=>
     <div class="allcontainer">
       <!--container com informações do login e acesso ao signup-->
-      <div class="container__login">
+      <div class="container__login container">
         <!--container com as informações do sistema e botão de signup-->
         <div class="blue__container">
           <span>Welcome to</span>
@@ -34,7 +36,7 @@
             with the customer, from prospecting to signing the sales contract.
           </p>
 
-          <button class="button__signup">Sign Up</button>
+          <button class="button__signup" id="sign-up">Sign Up</button>
         </div>
 
         <!--container com os inputs para fazer o login-->
@@ -129,7 +131,7 @@
             <li>Save contracts, documents, etc.</li>
           </ul>
         
-          <button class="button__signup">Sign Up</button>
+          <button class="button__signup" id="sign-in">Sign Up</button>
         </div>
 
         </div>
