Iniciando Animação de transição

--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
 
     <title>Document</title>
   </head>
-  <body class=>
+  <body id="body">
     <div class="allcontainer">
       <!--container com informações do login e acesso ao signup-->
       <div class="container__login container">
